--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
-styles.css
 
-#one {
+.one  {
 	font-family: verdana;
 	font-size: 30px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	border-bottom: 1px solid black;
-
+	background-color: floralwhite;
 }
 .code {
 	font-family: courier;
@@ -35,7 +34,7 @@ styles.css
 	padding-left: 30px;
 }
 .text {
-	text-align: right;
+text-align: right;
 }
 .bag {
 	text-align: right;
@@ -82,7 +81,7 @@ styles.css
 	font-size: 30px;
 }
 .recom {
-	width: 100px;
+	width: 110px;
 }
 .size {
 	width: 50%;
